fixed scrollbar

--- a/public/style-room.css
+++ b/public/style-room.css
@@ -30,7 +30,7 @@ a {
     display: grid;
     grid-template-areas: "message-area current-users" "message-bar current-users";
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 3fr 1fr;
+    grid-template-rows: 30rem 1fr;
     row-gap: 1rem;
     column-gap: 1rem;
     padding: 1rem;
@@ -41,7 +41,7 @@ a {
         min-height: 170vh;
         grid-template-areas: "message-area" "message-bar" "current-users";
         grid-template-columns: 1fr;
-        grid-template-rows: 3fr 1fr 2fr;
+        grid-template-rows: 20rem 10rem 2fr;
     }
 }
 
